{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 217,
  "lineage": "40ad4d3d-0814-516c-3302-1b9861001cef",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "quest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-04f5682f7cc1e4757",
            "domain": "vpc",
            "id": "eipalloc-01eb4f311fffd6f0a",
            "instance": "i-0bc0b88b7c63a7070",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05781ded394ee8afc",
            "private_dns": "ip-172-31-37-137.ec2.internal",
            "private_ip": "172.31.37.137",
            "public_dns": "ec2-54-83-224-102.compute-1.amazonaws.com",
            "public_ip": "54.83.224.102",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.quest",
            "aws_security_group.quest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "quest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc2d3e4c0f9ebd18",
            "arn": "arn:aws:ec2:us-east-1:415090045172:instance/i-0bc0b88b7c63a7070",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bc0b88b7c63a7070",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jestallin-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05781ded394ee8afc",
            "private_dns": "ip-172-31-37-137.ec2.internal",
            "private_ip": "172.31.37.137",
            "public_dns": "ec2-18-215-230-61.compute-1.amazonaws.com",
            "public_ip": "18.215.230.61",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-025c5b5c7429d214b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "quest"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-19144446",
            "tags": {
              "Name": "quest"
            },
            "tags_all": {
              "Name": "quest"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0aa673bdc09c441cf"
            ]
          },
          "dependencies": [
            "aws_security_group.quest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "quest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:415090045172:loadbalancer/app/quest/26fc65dd1f4d7e86",
            "arn_suffix": "app/quest/26fc65dd1f4d7e86",
            "dns_name": "quest-1612835205.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:415090045172:loadbalancer/app/quest/26fc65dd1f4d7e86",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "quest",
            "security_groups": [
              "sg-0aa673bdc09c441cf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-19144446"
              },
              {
                "subnet_id": "subnet-f8900bc9"
              }
            ],
            "subnets": [
              "subnet-19144446",
              "subnet-f8900bc9"
            ],
            "vpc_id": "vpc-83aecefe",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.quest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "quest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:415090045172:listener/app/quest/26fc65dd1f4d7e86/ebb744529c5c31f3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:415090045172:targetgroup/quest/870a519a2dd72ab3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:415090045172:listener/app/quest/26fc65dd1f4d7e86/ebb744529c5c31f3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:415090045172:loadbalancer/app/quest/26fc65dd1f4d7e86",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.quest",
            "aws_lb_target_group.quest",
            "aws_security_group.quest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "quest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:415090045172:targetgroup/quest/870a519a2dd72ab3",
            "arn_suffix": "targetgroup/quest/870a519a2dd72ab3",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:415090045172:targetgroup/quest/870a519a2dd72ab3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "quest",
            "port": 3001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-83aecefe"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "quest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:415090045172:targetgroup/quest/870a519a2dd72ab3-20210710174447879600000001",
            "port": 3001,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:415090045172:targetgroup/quest/870a519a2dd72ab3",
            "target_id": "i-0bc0b88b7c63a7070"
          },
          "dependencies": [
            "aws_instance.quest",
            "aws_lb_target_group.quest",
            "aws_security_group.quest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "quest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415090045172:security-group/sg-0aa673bdc09c441cf",
            "description": "quest sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa673bdc09c441cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "3000",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "3001",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "quest",
            "name_prefix": "",
            "owner_id": "415090045172",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform"
            },
            "tags_all": {
              "Name": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-83aecefe"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}